// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryPromo list base should render correctly 1`] = `
.emotion-0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@media (max-width: 62.9375rem) {
  .emotion-2 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

.emotion-2:last-child {
  border: none;
}

.emotion-4 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-4 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-4 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-4 {
      display: block;
    }
  }
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-6 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-8 {
  position: relative;
}

.emotion-10 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-10 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-10 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-10 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-12 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <ul
    class="emotion-0 emotion-1"
    role="list"
  >
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          dir="ltr"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <img
              alt="Alt text"
              src="https://foobar.com/image.png"
            />
          </div>
        </div>
        <div
          class="emotion-10 emotion-11"
          dir="ltr"
        >
          <h3
            class="emotion-12 emotion-13"
          >
            The headline of the promo
          </h3>
          <p
            class="emotion-14 emotion-15"
          >
            The summary of the promo
          </p>
          <time>
            12 March 2019
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`StoryPromo list base should render correctly without border 1`] = `
.emotion-0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-2:last-child {
  border: none;
}

.emotion-4 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-4 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-4 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-4 {
      display: block;
    }
  }
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-6 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-8 {
  position: relative;
}

.emotion-10 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-10 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-10 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-10 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-12 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <ul
    class="emotion-0 emotion-1"
    role="list"
  >
    <li
      class="emotion-2 emotion-3"
      role="listitem"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          dir="ltr"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <img
              alt="Alt text"
              src="https://foobar.com/image.png"
            />
          </div>
        </div>
        <div
          class="emotion-10 emotion-11"
          dir="ltr"
        >
          <h3
            class="emotion-12 emotion-13"
          >
            The headline of the promo
          </h3>
          <p
            class="emotion-14 emotion-15"
          >
            The summary of the promo
          </p>
          <time>
            12 March 2019
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`StoryPromo list should render correctly 1`] = `
.emotion-0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-2 {
  padding: 0.5rem 0 1rem;
}

@media (max-width: 62.9375rem) {
  .emotion-2 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

.emotion-2:last-child {
  border: none;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    padding: 0 0 1.5rem;
  }
}

.emotion-2:first-child {
  padding-top: 0;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-2:first-child {
    padding-top: 1rem;
  }
}

.emotion-2:last-child {
  padding-bottom: 0;
}

.emotion-4 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-4 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-4 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-4 {
      display: block;
    }
  }
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-6 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-8 {
  position: relative;
}

.emotion-10 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-10 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-10 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-10 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-12 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <ul
    class="emotion-0 emotion-1"
    role="list"
  >
    <li
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          dir="ltr"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <img
              alt="Alt text"
              src="https://foobar.com/image.png"
            />
          </div>
        </div>
        <div
          class="emotion-10 emotion-11"
          dir="ltr"
        >
          <h3
            class="emotion-12 emotion-13"
          >
            The headline of the promo
          </h3>
          <p
            class="emotion-14 emotion-15"
          >
            The summary of the promo
          </p>
          <time>
            12 March 2019
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`StoryPromo list should render correctly without border 1`] = `
.emotion-0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-2 {
  padding: 0.5rem 0 1rem;
}

.emotion-2:last-child {
  border: none;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    padding: 0 0 1.5rem;
  }
}

.emotion-2:first-child {
  padding-top: 0;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-2:first-child {
    padding-top: 1rem;
  }
}

.emotion-2:last-child {
  padding-bottom: 0;
}

.emotion-4 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-4 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-4 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-4 {
      display: block;
    }
  }
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-6 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-8 {
  position: relative;
}

.emotion-10 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-10 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-10 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-10 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-12 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-14 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <ul
    class="emotion-0 emotion-1"
    role="list"
  >
    <li
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          dir="ltr"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <img
              alt="Alt text"
              src="https://foobar.com/image.png"
            />
          </div>
        </div>
        <div
          class="emotion-10 emotion-11"
          dir="ltr"
        >
          <h3
            class="emotion-12 emotion-13"
          >
            The headline of the promo
          </h3>
          <p
            class="emotion-14 emotion-15"
          >
            The summary of the promo
          </p>
          <time>
            12 March 2019
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
